--- a/main.html
+++ b/main.html
@@ -1,10 +1,11 @@
-<html>
+<html lang="en-US">
 <head>
+    <title>Recaman Spiral Sketch</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <script src="library/canvas.js"></script>
     <script src="library/recaman.js"></script>
     <script src="library/axis.js"></script>
-<!--    <script src="sketches/sketch.js"></script>-->
+    <script src="sketches/sketch.js"></script>
 </head>
 <body>
     <h2>Zoom test</h2>
