REC-4 Binary Zoom
* Comment out zoom test while working on other features

--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
     <script src="sketches/sketch.js"></script>
 </head>
 <body>
-    <div id="Zoom test">
-        <h2>Zoom test</h2>
-        <div id="zoom-test"></div>
-        <script src="sketches/zoomTest.js"></script>
-    </div>
+<!--    <div id="Zoom test">-->
+<!--        <h2>Zoom test</h2>-->
+<!--        <div id="zoom-test"></div>-->
+<!--        <script src="sketches/zoomTest.js"></script>-->
+<!--    </div>-->
 <main>
 </main>
 </body>
