REC-2 Sequence Generator
* Generate sequence values on demand
* Retrieve value or slice from sequence
* Scrolling values sketch

--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <script src="library/canvas.js"></script>
     <script src="library/recaman.js"></script>
     <script src="library/axis.js"></script>
-    <script src="sketches/sketch.js"></script>
+<!--    <script src="sketches/sketch.js"></script>-->
 </head>
 <body>
 <!--    <div id="Zoom test">-->
@@ -13,6 +13,11 @@
 <!--        <div id="zoom-test"></div>-->
 <!--        <script src="sketches/zoomTest.js"></script>-->
 <!--    </div>-->
+    <div>
+        <h2>Sequence test</h2>
+        <div id="sequence-test"></div>
+        <script src="sketches/sequenceTest.js"></script>
+    </div>
 <main>
 </main>
 </body>
