REC-3 Sequence Plotter
* Fix Sequence.get failing to generate when end undefined
* Fix Sequence.generate generating one too few terms
* Move SequencePlotter to new script
* Pass p5 object into axis to make math functions available
* Comment previous sketch, display new test sketch

--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <script src="library/canvas.js"></script>
     <script src="library/recaman.js"></script>
+    <script src="library/sequencePlotter.js"></script>
     <script src="library/axis.js"></script>
 <!--    <script src="sketches/sketch.js"></script>-->
 </head>
@@ -13,10 +14,15 @@
 <!--        <div id="zoom-test"></div>-->
 <!--        <script src="sketches/zoomTest.js"></script>-->
 <!--    </div>-->
+<!--    <div>-->
+<!--        <h2>Sequence test</h2>-->
+<!--        <div id="sequence-test"></div>-->
+<!--        <script src="sketches/sequenceTest.js"></script>-->
+<!--    </div>-->
     <div>
-        <h2>Sequence test</h2>
-        <div id="sequence-test"></div>
-        <script src="sketches/sequenceTest.js"></script>
+        <h2>Sequence Plotter Test</h2>
+        <div id="sequence-plot-test"></div>
+        <script src="sketches/sequencePlot.js"></script>
     </div>
 <main>
 </main>
